Fix mobile button animation, fix drop shadow on projects, fix divider position on mobile

--- a/src/styles/components/_divider.scss
+++ b/src/styles/components/_divider.scss
@@ -6,12 +6,12 @@
   line-height: 0;
   
   &-bottom {
-    bottom: 0;
+    bottom: -1px;
     transform: rotate(180deg);
   }
 
   &-top {
-    top: 0;
+    top: -1px;
   }
 
   .yellow {
