--- a/src/styles/sections/_about.scss
+++ b/src/styles/sections/_about.scss
@@ -68,6 +68,6 @@
 
 @media (min-width: 310px) and (min-height: 700px) {
   .about {
-    height: 100vh;
+    height: 100dvh;
   }
 }
