--- a/src/styles/sections/_contacts.scss
+++ b/src/styles/sections/_contacts.scss
@@ -1,6 +1,6 @@
 #contacts {
   background-color: $black;
-  height: 100vh;
+  height: 100dvh;
 
   .contacts {
     display: flex;
