--- a/src/styles/sections/_projects.scss
+++ b/src/styles/sections/_projects.scss
@@ -30,7 +30,7 @@
       }
 
       &_main, &_alt {
-        filter: drop-shadow(0 0.75rem 0.75rem rgba($black, 0.3))
+        box-shadow: 0 0.75rem 1.5rem rgba($black, 0.3)
       }
     }
 
