--- a/src/styles/sections/_why.scss
+++ b/src/styles/sections/_why.scss
@@ -7,6 +7,6 @@
   }
   
   @media (min-width: 768px) and (min-height: 700px) {
-    height: 100vh;
+    height: 100dvh;
   }
 }
